# proofsheet

./: .gitignore  pyproject.toml
proofsheet/: db.py  generate.py  main.py  utils.py
proofsheet/components/: proof_grid.py  proofsheet_grid.py  search_form.py
static/: styles.css
